--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="topNavBar" class="topNavBar">
         <div class="topNavBar-inner clearfix">
             <a class="logo" href="#" alt="logo" style="float: left;">
-                <span class="lx">LX</span><span class="card">card</span>
+                <span class="lx">LXl</span><span class="card">card</span>
             </a>
             <nav class="menu" style="float: right;">
                 <ul class="clearfix">
@@ -32,7 +32,7 @@
                         <a href="#siteWorks">作 品</a>
                     </li>
                     <li>
-                        <a href="#">博 客</a>
+                        <a href="#blog">博 客</a>
                     </li>
                     <li>
                         <a href="#calendar">日 历</a>
@@ -335,14 +335,6 @@
                         <div class="bolgInfo">本篇博客会整理一些编写本次项目时用到的一些api，以及相关同类型的api，其中包括jQuery api 和 DOM api。</div>
                     </div>
                 </div>
-                <!-- 如果需要分页器
-                <div class="swiper-pagination"></div> -->
-                <!-- 如果需要导航按钮 -->
-                
-                <!-- 如果需要导航按钮 -->
-                <div class="swiper-nav">
-                    
-                </div>
             </div>
             <div class="swiper-button-prev">
             </div>
@@ -368,7 +360,7 @@
                             <use xlink:href="#icon-jiantou1-z"></use>
                         </svg>
                     </div>
-                    <span>
+                    <span class="calendarTitle">
                         <span id="year"></span>
                         <span id="cnMonth"></span>
                     </span>
