--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
                             </svg>
                         </div>
                         <div class="blogTitle">
-                            <a href="">简历系列——常用api</a>
+                            <a href="https://github.com/lx515318141/NOTES/issues/1">简历系列——常用api</a>
                         </div>
-                        <div class="bolgInfo">本篇博客会整理一些编写本次项目时用到的一些api，以及相关同类型的api，其中包括jQuery api 和 DOM api。</div>
+                        <div class="bolgInfo">本篇博客会整理一些本次在编写个人简历项目过程中使用到的一些api，以及相关同类型的常用api，其中包括 jQuery api 和 DOM api。</div>
                     </div>
                     <div class="swiper-slide">
                         <div class="mark">
@@ -308,9 +308,12 @@
                             </svg>
                         </div>
                         <div class="blogTitle">
-                            <a href="">简历系列——关于页面中的距离关系</a>
+                            <a href="https://github.com/lx515318141/NOTES/issues/2">简历系列——关于页面中的距离关系</a>
                         </div>
-                        <div class="bolgInfo">本篇博客会整理一些编写本次项目时用到的一些api，以及相关同类型的api，其中包括jQuery api 和 DOM api。</div>
+                        <div class="bolgInfo">
+                            在本次项目中多次使用了元素与视口距离的关系，作为执行js的判断条件，如：当元素顶部超过视口二分之一时，顶部导航栏对应的模块名出现下划线，以及元素顶部超过视口底部100px元素执行上浮动画效果等。
+                            这些都需要对元素与视口以及页面顶部三种之间的距离关系进行分析以及处理，下面整理一些本次用到的求三者之间距离关系的api和思路。
+                        </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="mark">
@@ -319,9 +322,9 @@
                             </svg>
                         </div>
                         <div class="blogTitle">
-                            <a href="">简历系列——日历的制作</a>
+                            <a href="https://github.com/lx515318141/NOTES/issues/3">简历系列——日历的制作</a>
                         </div>
-                        <div class="bolgInfo">本篇博客会整理一些编写本次项目时用到的一些api，以及相关同类型的api，其中包括jQuery api 和 DOM api。</div>
+                        <div class="bolgInfo">本篇博客详细记录了，我在本次制作日历过程中的主体思路和算法，以及遇到的一些相关问题和它们的解决办法。最后我还整理了一些关于深拷贝的方法和大家共享。</div>
                     </div>
                     <div class="swiper-slide">
                         <div class="mark">
@@ -330,9 +333,11 @@
                             </svg>
                         </div>
                         <div class="blogTitle">
-                            <a href="">简历系列——滑入动画</a>
+                            <a href="https://github.com/lx515318141/NOTES/issues/4">简历系列——滑入动画</a>
                         </div>
-                        <div class="bolgInfo">本篇博客会整理一些编写本次项目时用到的一些api，以及相关同类型的api，其中包括jQuery api 和 DOM api。</div>
+                        <div class="bolgInfo">我在本篇简历中各个模块使用了滑入的动画效果，最初使用原生JS实现，后因为有时会出现闪烁现象，而改为使用动画效果库。先后使用了 scrollReveal.js 和 wow.js 。<br>
+                            本篇博客详细记录了两种动画效果库的使用方法，以及我使用的逻辑判断。
+                        </div>
                     </div>
                 </div>
             </div>
