--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.bootcss.com/wow/1.1.2/wow.min.js"></script>
     
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
-    <link rel="stylesheet" href="./a.css">
+    <link rel="stylesheet" href="./css/a.css">
 </head>
 
 <body>
