修改个人作品

--- a/index.html
+++ b/index.html
@@ -248,12 +248,12 @@
                         <span></span>
                         <div class="workContent wow fadeInRight" class="portfolio" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="200" data-wow-iteration="1">
                             <div class="angle"></div>
-                            <p class="title">旋转太极</p>
-                            <img src="./img/works/taiji.png" alt="">
-                            <p class="text">项目简介：自己旋转的太极图</p>
+                            <p class="title">导航网页</p>
+                            <img src="./img/works/nav.png" alt="">
+                            <p class="text">项目简介：自制导航网页，可存储网址，转跳网站</p>
                             <div class="footer">
-                                <a target="_blank" href="https://lx515318141.github.io/CSS-Atlas/weileiTaiJi/index.html">预览</a>
-                                <a target="_blank" href="https://github.com/lx515318141/CSS-Atlas/tree/master/weileiTaiJi">源码</a>
+                                <a target="_blank" href="https://lx515318141.github.io/JS/nav-demo/index.html">预览</a>
+                                <a target="_blank" href="https://github.com/lx515318141/JS/tree/master/nav-demo">源码</a>
                             </div>
                         </div>
                     </div>
@@ -261,12 +261,12 @@
                         <span></span>
                         <div class="workContent wow fadeInLeft" class="portfolio" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="200" data-wow-iteration="1">
                             <div class="angle"></div>
-                            <p class="title">百度搜索框</p>
-                            <img src="./img/works/百度.png" alt="">
-                            <p class="text">项目简介：模仿百度搜索框样式</p>
+                            <p class="title">自制简易画板</p>
+                            <img src="./img/works/canvas.jpg" alt="">
+                            <p class="text">项目简介：自制简易画板，可换色，换粗细，擦除，保存</p>
                             <div class="footer">
-                                <a target="_blank" href="https://lx515318141.github.io/CSS-Atlas/baidu/index.html">预览</a>
-                                <a target="_blank" href="https://github.com/lx515318141/CSS-Atlas/tree/master/baidu">源码</a>
+                                <a target="_blank" href="https://lx515318141.github.io/JS/canvas/index.html">预览</a>
+                                <a target="_blank" href="https://github.com/lx515318141/JS/tree/master/canvas">源码</a>
                             </div>
                         </div>
                     </div>
@@ -274,12 +274,12 @@
                         <span></span>
                         <div class="workContent wow slideInRight" class="portfolio" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="200" data-wow-iteration="1">
                             <div class="angle"></div>
-                            <p class="title">自动画皮卡丘</p>
-                            <img src="./img/works/pikachu.png" alt="">
-                            <p class="text">项目简介：自动画皮卡丘，并同步显示CSS代码，支持变速</p>
+                            <p class="title">自动画会哭的乔巴</p>
+                            <img src="./img/works/Chopper.png" alt="">
+                            <p class="text">项目简介：自动画会哭的乔巴，并同步显示CSS代码，支持变速、重播</p>
                             <div class="footer">
-                                <a target="_blank" href="https://lx515318141.github.io/animation-pikachu-demo/index.html">预览</a>
-                                <a target="_blank" href="https://github.com/lx515318141/animation-pikachu-demo">源码</a>
+                                <a target="_blank" href="https://lx515318141.github.io/animation-Chopper/index.html">预览</a>
+                                <a target="_blank" href="https://github.com/lx515318141/animation-Chopper">源码</a>
                             </div>
                         </div>
                     </div>
@@ -471,7 +471,14 @@
                         <!-- <p>在校期间担任班长，团结同学</p> -->
                     </div>
                 </li>
-                
+                <li>
+                    <h3>工作</h3>
+                    <div>
+                        <h4>深圳市节点信息技术有限公司</h4>
+                        <p class="time">2020.07-至今</p>
+                        <!-- <p>在校期间担任班长，团结同学</p> -->
+                    </div>
+                </li>
             </ul>
         </div>
     </section>
